feat(api): return location of restaurants and the office
